# xde-theme-circuits

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  README.md.in  RELEASE  THANKS  configure.ac  configure.template  index.md
theme/: style  theme.ini  themerc
theme/adwm/: themerc
